[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Slurm-web"
version = "3.2.0"
description = "Web interface to Slurm HPC clusters"
license = {text = "GPLv3+"}
requires-python = ">=3.6"
keywords = ["slurm", "hpc", "cluster"]
authors = [
    {name = "Rémi Palancher", email = "remi@rackslab.io"},
]
dependencies = [
    "aiohttp",
    "Flask",
    "requests",
    "RFL.authentication >= 1.0.3",
    "RFL.core >= 1.1.0",
    "RFL.log",
    "RFL.settings >= 1.1.1",
    "RFL.web",
    "setuptools"
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "Flask-Cors",
    "sshtunnel",
]
agent = [
    "RacksDB[web]",
    "redis",
    "prometheus-client",
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage",
]

[project.scripts]
slurm-web-agent = 'slurmweb.exec.agent:SlurmwebExecAgent.run'
slurm-web-gateway = 'slurmweb.exec.gateway:SlurmwebExecGateway.run'
slurm-web-ldap-check = 'slurmweb.exec.ldap:SlurmwebExecLDAPCheck.run'
slurm-web-gen-jwt-key = 'slurmweb.exec.genjwt:SlurmwebExecGenJWT.run'
slurm-web-show-conf = 'slurmweb.exec.showconf:SlurmwebExecShowConf.run'

[tool.setuptools.packages.find]
include = ['slurmweb*']
exclude = ['slurmweb.tests']

[project.urls]
"Homepage" = "https://github.com/rackslab/slurm-web"
"Bug Tracker" = "https://github.com/rackslab/slurm-web/issues"

[tool.black]
target-version = ['py36']
color = 1
