[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Slurm-web"
version = "5.1.0"
description = "Web interface to Slurm HPC clusters"
license = {text = "GPLv3+"}
requires-python = ">=3.6"
keywords = ["slurm", "hpc", "cluster"]
authors = [
    {name = "Rémi Palancher", email = "remi@rackslab.io"},
]
dependencies = [
    "aiohttp",
    "Flask",
    "RFL.authentication >= 1.5.0",
    "RFL.core >= 1.1.0",
    "RFL.log >= 1.4.0",
    "RFL.settings >= 1.4.0",
    "RFL.web >= 1.3.0",
    "setuptools"
]
readme = "README.md"

[project.optional-dependencies]
dev = [
    "Flask-Cors",
    "sshtunnel",
]
agent = [
    "ClusterShell",
    "prometheus-client",
    "RacksDB[web]",
    "redis",
    "requests",
]
gateway = [
    "markdown",
]
tests = [
    "coverage",
    "Jinja2",
    "parameterized",
    "pytest",
    "pytest-cov",
]

[project.scripts]
slurm-web-agent = 'slurmweb.exec.agent:SlurmwebExecAgent.run'
slurm-web-gateway = 'slurmweb.exec.gateway:SlurmwebExecGateway.run'
slurm-web-ldap-check = 'slurmweb.exec.ldap:SlurmwebExecLDAPCheck.run'
slurm-web-gen-jwt-key = 'slurmweb.exec.genjwt:SlurmwebExecGenJWT.run'
slurm-web-show-conf = 'slurmweb.exec.showconf:SlurmwebExecShowConf.run'
slurm-web-connect-check = 'slurmweb.exec.connect:SlurmwebExecConnectCheck.run'

[tool.setuptools.packages.find]
include = ['slurmweb*']

[project.urls]
"Homepage" = "https://github.com/rackslab/slurm-web"
"Bug Tracker" = "https://github.com/rackslab/slurm-web/issues"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
